# video_transmit

./: README.md
src/: get_camera.cpp  rtmp_transmit.cpp
video_transmit/: CMakeLists.txt
